--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "5.3.1",
     "bcrypt": "5.1.1",
     "express": "4.18.2",
+    "express-async-errors": "3.1.1",
     "jsonwebtoken": "9.0.2"
   }
 }
