--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/express": "4.17.18",
     "@types/jsonwebtoken": "9.0.3",
     "@types/node": "20.8.0",
+    "dotenv": "16.3.1",
     "eslint": "8.50.0",
     "prisma": "5.3.1",
     "tsup": "7.2.0",
